# memory-engine

./: .gitignore  README.md  pyproject.toml  test_persona.py  test_smoke.py  test_trust.py
docs/: EVALUATION.md  README.md  RESEARCH_REPORT.md
docs/results/: ablation_results.json  comparison_3way.json  hard_benchmark.json  hard_eval_dataset.json  retrieval_holographic_vs_faiss.json  trust_value_results.json
eval/: cluster_vs_flat_results.json  contrarian_data.json  contrarian_results.json  evolution_eval_results.json  full_stack_results.json  hard_eval.py  mao_thinker_data.json  mao_thinker_results.json  optimization_results.json  scale_eval_results.json  stress_test_results.json  test_ab_comparison.py  test_ablation.py  test_auto_network.py  test_cluster_vs_flat.py  test_conflict.py  test_consolidation.py  test_contrarian.py  test_evolution.py  test_full_stack.py  test_mao_compare.py  test_new_features.py  test_optimizations.py  test_optimize.py  test_scale.py  test_stress.py  test_trust_ablation.py  test_trust_extreme.py  test_trust_value.py
memory_engine/: __init__.py  cluster_index.py  conflict_detector.py  consolidator.py  deepseek_client.py  engine.py  fact_store.py  health_monitor.py  memory_graph.py  memory_worth.py  partitioned_memory.py  persona_manager.py  service.py  usage_feedback.py
