[project]
name = "memory-engine"
version = "0.1.0"
description = "可编辑记忆 + 可切换性格的外挂库, 给任意 LLM API (DeepSeek/OpenAI/Claude) 用"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.6",
    "transformers>=4.46",
    "peft>=0.14",
    "accelerate>=1.0",
    "datasets>=3.0",
    "faiss-cpu>=1.8",
    "sentence-transformers>=3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["memory_engine"]
